tests/valid/proc_type.fl
sum1 :: proc (a: i32, b: i32) -> i32 { return 0; }
sum2 :: proc (i32, b: i32) -> i32 { return 0; }
sum3 :: proc (i32, i32) -> i32 { return 0; }

SumType :: proc* (i32, i32) -> i32;

main :: proc () {
  my_sum_func: SumType = sum1;
  my_sum_func = sum2;
  my_sum_func = sum3;

  other_sum_func : proc* (i32, i32) -> i32 = my_sum_func;
  other_sum_func = sum1;
  other_sum_func = sum2;
  other_sum_func = sum3;
}
