tests/invalid/negative_size_array.fl
main :: proc () {
  arr: [0]i32;
}
